--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "check": "gts check",
     "clean": "gts clean",
     "compile": "tsc -p .",
-    "build": "rm -rf dist/* && webpack --config build --progress --colors --display-error-details && yarn run compile",
+    "build": "rm -rf dist/* && webpack --config build --progress --color --stats detailed && yarn run compile",
     "fix": "gts fix",
     "docs": "npx typedoc && docker build -t irita/docs-irita-sdk-js .",
     "proto-gen": "sh ./scripts/protocgen.sh"
@@ -42,9 +42,10 @@
     "@types/jest": "^27.4.1",
     "@types/mathjs": "^6.0.4",
     "@types/node": "^10.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "babel-loader": "^8.1.0",
     "eslint": "^7.32.0",
-    "eslint-loader": "^4.0.0",
     "gts": "^3.1.0",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.3",
