--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "bech32": "^1.1.3",
     "bip32": "^2.0.4",
     "bip39": "^3.0.2",
+    "bufferutil": "^4.0.6",
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^3.1.9-1",
     "events": "^3.1.0",
@@ -77,6 +78,8 @@
     "secp256k1": "^3.7.1",
     "secure-random": "^1.1.2",
     "sha256": "^0.2.0",
-    "sm-crypto": "tw-bc-group/sm-crypto-js"
+    "sm-crypto": "tw-bc-group/sm-crypto-js",
+    "utf-8-validate": "^5.0.9",
+    "uuid": "^8.3.2"
   }
 }
