--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clean": "gts clean",
     "compile": "tsc -p .",
     "build": "rm -rf dist/* && webpack --config build --progress --color --stats detailed && yarn run compile",
+    "build:prod": "NODE_ENV=production npm run build",
     "fix": "gts fix",
     "docs": "npx typedoc && docker build -t irita/docs-irita-sdk-js .",
     "proto-gen": "sh ./scripts/protocgen.sh"
@@ -64,6 +65,7 @@
     "bech32": "^1.1.3",
     "bip32": "^2.0.4",
     "bip39": "^3.0.2",
+    "buffer": "^6.0.3",
     "bufferutil": "^4.0.6",
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^3.1.9-1",
